--- a/index.html
+++ b/index.html
@@ -409,8 +409,21 @@
                       ./images/Laptop/banking-laptop@2x.jpg 2x
                     "
                   />
-                  <source />
-                  <source />
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Tablet/banking-tablet1x.jpg  1x,
+                      ./images/Tablet/banking-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width:767px)"
+                    srcset="
+                      ./images/Mobile/banking-mobile1x.jpg  1x,
+                      ./images/Mobile/banking-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img src="./images/banking-laptop.jpg" alt="" />
                 </picture>
                 <p class="text-sect-four">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -426,12 +439,30 @@
             </li>
             <li class="item-section-four">
               <div class="img-container">
-                <img
-                  src="./images/Tablet/mobiles.jpg"
-                  alt="Mobile phone"
-                  width="356"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1158px)"
+                    srcset="
+                      ./images/Laptop/app-laptop1x.jpg  1x,
+                      ./images/Laptop/app-laptop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Tablet/app-tablet1x.jpg  1x,
+                      ./images/Tablet/app-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width:767px)"
+                    srcset="
+                      ./images/Mobile/app-mobile1x.jpg  1x,
+                      ./images/Mobile/app-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img src="./images/app-laptop.jpg" alt="" />
+                </picture>
                 <p class="text-sect-four">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -445,12 +476,30 @@
             </li>
             <li class="item-section-four">
               <div class="img-container">
-                <img
-                  src="./images/Tablet/laptop.jpg"
-                  alt="Laptop"
-                  width="356"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1158px)"
+                    srcset="
+                      ./images/Laptop/laptop-laptop1x.jpg  1x,
+                      ./images/Laptop/laptop-laptop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Tablet/laptop-tablet1x.jpg  1x,
+                      ./images/Tablet/laptop-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width:767px)"
+                    srcset="
+                      ./images/Mobile/laptop-mobile1x.jpg  1x,
+                      ./images/Mobile/laptop-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img src="./images/laptop-laptop.jpg" alt="" />
+                </picture>
                 <p class="text-sect-four">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -465,12 +514,30 @@
             </li>
             <li class="item-section-four">
               <div class="img-container">
-                <img
-                  src="./images/Tablet/taxi.jpg"
-                  alt="Taxi"
-                  width="356"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1158px)"
+                    srcset="
+                      ./images/Laptop/taxi-laptop1x.jpg  1x,
+                      ./images/Laptop/taxi-laptop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Tablet/taxi-tablet1x.jpg  1x,
+                      ./images/Tablet/taxi-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width:767px)"
+                    srcset="
+                      ./images/Mobile/taxi-mobile1x.jpg  1x,
+                      ./images/Mobile/taxi-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img src="./images/taxi-laptop.jpg" alt="" />
+                </picture>
                 <p class="text-sect-four">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -484,12 +551,30 @@
             </li>
             <li class="item-section-four">
               <div class="img-container">
-                <img
-                  src="./images/Tablet/mobile.jpg"
-                  alt="Mobile phone"
-                  width="356"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1158px)"
+                    srcset="
+                      ./images/Laptop/phone-laptop1x.jpg  1x,
+                      ./images/Laptop/phone-laptop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Tablet/phone-tablet1x.jpg  1x,
+                      ./images/Tablet/phone-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width:767px)"
+                    srcset="
+                      ./images/Mobile/phone-mobile1x.jpg  1x,
+                      ./images/Mobile/phone-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img src="./images/phone-laptop.jpg" alt="" />
+                </picture>
                 <p class="text-sect-four">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -503,12 +588,30 @@
             </li>
             <li class="item-section-four">
               <div class="img-container">
-                <img
-                  src="./images/Tablet/girl.jpg"
-                  alt="Woman"
-                  width="356"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width:1158px)"
+                    srcset="
+                      ./images/Laptop/girl-laptop1x.jpg  1x,
+                      ./images/Laptop/girl-laptop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:768px)"
+                    srcset="
+                      ./images/Tablet/girl-tablet1x.jpg  1x,
+                      ./images/Tablet/girl-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width:767px)"
+                    srcset="
+                      ./images/Mobile/girl-mobile1x.jpg  1x,
+                      ./images/Mobile/girl-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img src="./images/girl-laptop.jpg" alt="" />
+                </picture>
                 <p class="text-sect-four">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
